# kimiya

./: CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  benchmarks.md  deny.toml
benches/: benchmarks.rs
docs/architecture/: overview.md
docs/development/: roadmap.md
examples/: basic.rs
src/: bridge.rs  electrochemistry.rs  element.rs  error.rs  fitting.rs  gas.rs  inorganic.rs  kinetics.rs  lib.rs  logging.rs  molecule.rs  network.rs  nuclear.rs  organic.rs  phase.rs  potential.rs  reaction.rs  reaction_dynamics.rs  sensitivity.rs  solution.rs  spectroscopy.rs  stoichiometry.rs  thermo.rs  thermochem.rs
src/integration/: soorat.rs
tests/: integration.rs
