[package]
name = "kimiya"
version = "1.0.0"
edition = "2024"
rust-version = "1.89"
license = "GPL-3.0"
description = "Kimiya — chemistry engine for elements, molecules, reactions, kinetics, and thermochemistry"
homepage = "https://github.com/MacCracken/kimiya"
repository = "https://github.com/MacCracken/kimiya"
readme = "README.md"
documentation = "https://docs.rs/kimiya"
keywords = ["chemistry", "elements", "reactions", "molecular", "thermochemistry"]
categories = ["science", "simulation"]
exclude = [".claude/", ".github/", "docs/", "scripts/"]

[features]
default = []
logging = ["dep:tracing-subscriber"]

[dependencies]
hisab = { version = "1.1", features = ["autodiff"] }
serde = { version = "1", features = ["derive"] }
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"], optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
serde_json = "1"

[[bench]]
name = "benchmarks"
harness = false
